Fixed some mistakes in following the spec.
(note: for some mysterious reason, on my machine spc files fail to index, unless the plugin is manually specified.)

--- a/ChiptuneImporter/en.lproj/schema.strings
+++ b/ChiptuneImporter/en.lproj/schema.strings
@@ -6,8 +6,8 @@
   Copyright (c) 2014 Daniele Cattaneo. All rights reserved.
 */
 
-"kMDItemChiptuneOST" = "Original Soundtrack";
-"kMDItemChiptuneDumper" = "Dumper";
+"com_danielecattaneo_chiptunemdimporter_ost" = "Original Soundtrack";
+"com_danielecattaneo_chiptunemdimporter_dumper" = "Dumper";
 
-"kMDItemChiptuneOST.Description" = "Title of the original soundtrack album disc.";
-"kMDItemChiptuneDumper.Description" = "Author of the sound code dump.";
+"com_danielecattaneo_chiptunemdimporter_ost.Description" = "Title of the original soundtrack album disc.";
+"com_danielecattaneo_chiptunemdimporter_dumper.Description" = "Author of the sound code dump.";
